      such behavior is relevant, keeping
      various unserializable options like those generated
      by contains_eager() out of individual instance states.
      [ticket:1553]
    
    - Session.execute() now locates table- and 
      mapper-specific binds based on a passed
      in expression which is an insert()/update()/delete() 
      construct. [ticket:1054]
      
    - Fixed a needless select which would occur when merging
      transient objects that contained a null primary key
      identifier.  [ticket:1618]

    - Mutable collection passed to the "extension" attribute
      of relation(), column_property() etc. will not be mutated
      or shared among multiple instrumentation calls, preventing
      duplicate extensions, such as backref populators,
      from being inserted into the list.
      [ticket:1585]
    
    - Fixed the call to get_committed_value() on CompositeProperty.
      [ticket:1504]

    - Fixed bug where Query would crash if a join() with no clear
      "left" side were called when a non-mapped column entity
      appeared in the columns list. [ticket:1602]
    
    - Fixed bug whereby composite columns wouldn't load properly
      when configured on a joined-table subclass, introduced in
      version 0.5.6 as a result of the fix for [ticket:1480].
      [ticket:1616] thx to Scott Torborg.

    - The "use get" behavior of many-to-one relations, i.e. that a 
      lazy load will fallback to the possibly cached query.get() 
      value, now works across join conditions where the two compared 
      types are not exactly the same class, but share the same 
      "affinity" - i.e. Integer and SmallInteger.  Also allows
      combinations of reflected and non-reflected types to work
      with 0.5 style type reflection, such as PGText/Text (note 0.6 
      reflects types as their generic versions).   [ticket:1556]
    
    - Fixed bug in query.update() when passing Cls.attribute